<resources>
    <string name="app_name">drone-emulator</string>
    <string name="title_drone_emulator">Drone Emulator</string>
    <string name="subtitle_drone_emulator">MAVLink v1 を UDP Socket で直接送受信する Android ドローンエミュレータ</string>
    <string name="connection_title">接続設定</string>
    <string name="mode_prod">本番</string>
    <string name="mode_mock">モック</string>
    <string name="local_port_hint">Local UDP Port</string>
    <string name="remote_host_hint">mavsdk_serverのIPアドレス（PCのIP）</string>
    <string name="remote_port_hint">Remote Port</string>
    <string name="connect_button">接続開始</string>
    <string name="ble_pairing_button">BLE設定</string>
    <string name="main_title">テレメトリ</string>
    <string name="disconnect_button">切断</string>
    <string name="altitude_label">高度</string>
    <string name="battery_label">バッテリー</string>
    <string name="gps_label">GPS</string>
    <string name="attitude_label">姿勢</string>
    <string name="arm_label">ARM状態</string>
    <string name="latest_command_label">最新コマンド</string>
    <string name="command_log_label">受信ログ</string>
    <string name="ble_title">BLE設定</string>
    <string name="ble_state_label">状態</string>
    <string name="ble_device_label">接続デバイス</string>
</resources>
